refactor: Вернул href для ссылок на соц. сети

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
           <li class="footer__socials-list-item">
 
-            <a class="socials_link">
+            <a class="socials_link" href="#0">
 
               <img 
                 src="/images/yt.svg" 
@@ -349,7 +349,7 @@
 
           <li class="footer__socials-list-item">
 
-            <a class="socials_link">
+            <a class="socials_link" href="#0">
 
               <img 
                 src="/images/vk.svg" 
@@ -362,7 +362,7 @@
 
           <li class="footer__socials-list-item">
 
-            <a class="socials_link">
+            <a class="socials_link" href="#0">
 
               <img 
                 src="/images/pinterest.svg" 
