refactor: классы для span в h1 для выравнивания текста заменены на  text-center, text-right

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
 
         <h1 class="cover__title">
 
-          <span class="cover__title-item cover__title-item-start">
+          <span class="cover__title-item">
             оно
           </span>
 
-          <span class="cover__title-item cover__title-item-center">
+          <span class="cover__title-item text-center">
             тебе
           </span>
 
-          <span class="cover__title-item cover__title-item-end">
+          <span class="cover__title-item text-right">
             надо
           </span>
 
