add: Сверстан header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <ul class="header__links-list">
 
-          <li class="header__links-list-item header__links-list-item_no-bullit">
+          <li class="header__links-list-item list-item_no-bullit">
 
             <a class="header__link link_active" href="#0">
               главная
@@ -52,7 +52,6 @@
 
       </nav>
 
-      <!-- TODO: сдедать ссылку блочной -->
       <a class="header__logo">
 
         <img
@@ -243,7 +242,7 @@
 
         <div class="about__column-left">
 
-          <div class="about__logo-white">
+          <div class="about__logo">
 
           </div>
           <!-- <img 
