add: Сверстана секция lots

--- a/index.html
+++ b/index.html
@@ -116,22 +116,13 @@
           Лоты
         </h2>
 
-        <ul class="lots__list">
+        <ul class="lots__card-list">
 
-          <li class="lots__list-item">
+          <li class="lots__card-list-item">
 
             <a href="#0" class="card__link">
 
-              <article class="card__content">
-
-                <div class="card__image">
-
-                  <img 
-                    src="/images/card-lot-01.jpg" 
-                    alt="Дети играют с зеркалом"
-                  >
-
-                </div>
+              <article class="card card_type_film">
 
                 <div class="overlay"></div>
 
@@ -155,18 +146,11 @@
 
           </li>
 
-          <li class="lots__list-item">
+          <li class="lots__card-list-item">
 
             <a href="#0" class="card__link">
 
-              <article class="card__content">
-
-                <div class="card__image">
-
-                  <img 
-                    src="/images/card-lot-02.jpg" 
-                    alt="Книга 'Иностранка' от автора Джеймс Джойс"
-                  >
+              <article class="card card_type_book">
 
                 <div class="overlay"></div>
 
@@ -191,19 +175,12 @@
 
           </li>
 
-          <li class="lots__list-item">
+          <li class="lots__card-list-item">
 
             <a href="#0" class="card__link">
 
-              <article class="card__content">
-
-                <div class="card__image">
-
-                  <img 
-                    src="/images/card-lot-03.jpg" 
-                    alt="Разноцветная картина в геометричекском стиле"
-                  >
-
+              <article class="card card_type_picture">
+                
                 <div class="overlay"></div>
 
                 <div class="card__info">
@@ -230,7 +207,7 @@
 
         <div class="lots__more">
 
-          <a class="lots__more-link" href="#0">
+          <a class="lots__look-more-link" href="#0">
             посмотреть больше
           </a>
 
