add: Сверстана секция about

--- a/index.html
+++ b/index.html
@@ -222,11 +222,13 @@
 
           <div class="about__logo">
 
+            <img
+              class="about__logo-image"
+              src="/images/logo-white.svg" 
+              alt="Белый логотип 'Оно Тебе Надо' на черном фоне"
+            >
+
           </div>
-          <!-- <img 
-            src="/images/logo-white.svg" 
-            alt="Белый логотип оно тебе надо" 
-          > -->
 
         </div>
 
