refactor: для тегов a добавлены недостающие href

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       </nav>
 
-      <a class="header__logo">
+      <a class="header__logo" href="#0">
 
         <img
           src="images/logo-black.svg" 
