refactor: После ревью

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <a class="header__logo" href="#0">
 
         <img
-          src="images/logo-black.svg" 
-          alt="Черный логотип оно тебе надо" 
+          src="./images/logo-black.svg" 
+          alt="Логотип аукциона 'Оно Тебе Надо'" 
         >
 
       </a>
@@ -232,8 +232,8 @@
 
             <img
               class="about__logo-image"
-              src="/images/logo-white.svg" 
-              alt="Белый логотип 'Оно Тебе Надо' на черном фоне"
+              src="./images/logo-white.svg"
+              alt="Логотип аукциона 'Оно Тебе Надо'"
             >
 
           </div>
@@ -323,7 +323,7 @@
 
             <img
               class="footer__social-icon" 
-              src="/images/yt.svg" 
+              src="./images/yt.svg" 
               alt="Логотип YouTube"
             >
 
@@ -337,7 +337,7 @@
 
             <img
               class="footer__social-icon" 
-              src="/images/vk.svg" 
+              src="./images/vk.svg" 
               alt="Логотип VK"
             >
 
@@ -351,7 +351,7 @@
 
             <img
               class="footer__social-icon" 
-              src="/images/pinterest.svg" 
+              src="./images/pinterest.svg" 
               alt="Логотип Pinterest"
             >
 
